KULRICE-3274 - committing merge of 1.0.0 into 1.0.x KC