@@ -1,11 +1,11 @@
 /*
- * Copyright 2005-2006 The Kuali Foundation.
+ * Copyright 2005-2009 The Kuali Foundation
  *
  *
- * Licensed under the Educational Community License, Version 1.0 (the "License"); you may not use this file except in
+ * Licensed under the Educational Community License, Version 2.0 (the "License"); you may not use this file except in
  * compliance with the License. You may obtain a copy of the License at
  *
- * http://www.opensource.org/licenses/ecl1.php
+ * http://www.opensource.org/licenses/ecl2.php
  *
  * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS
  * IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific
@@ -56,12 +56,12 @@ public class ActionListForm extends KualiForm {
     private Map defaultActions = new HashMap();
     private String delegationId;
     private List delegators;
-    private String primaryDelegateId;
-    private List primaryDelegates;
     private Boolean hasCustomActions;
     private Boolean routeLogPopup;
     private Boolean documentPopup;
 
+    private Boolean hasDisplayParameters;
+    
     // "sticky" parameters for paginated action list
     private Integer currentPage;
     private String currentSort;
@@ -76,7 +76,7 @@ public class ActionListForm extends KualiForm {
     private String cssFile = "kuali.css";
     private String logoAlign = "left";
     private String viewOutbox;
-    private Long[] outboxItems;
+    private String[] outboxItems;
     private boolean outBoxEmpty;
     private Boolean showOutbox;
     private List<ExtraButton> headerButtons = new ArrayList<ExtraButton>();
@@ -104,22 +104,6 @@ public class ActionListForm extends KualiForm {
     public void setDelegator(String delegator) {
 	this.delegator = delegator;
     }
-
-    public String getPrimaryDelegateId() {
-		return this.primaryDelegateId;
-	}
-
-	public void setPrimaryDelegateId(String primaryDelegateId) {
-		this.primaryDelegateId = primaryDelegateId;
-	}
-
-	public List getPrimaryDelegates() {
-		return this.primaryDelegates;
-	}
-
-	public void setPrimaryDelegates(List primaryDelegates) {
-		this.primaryDelegates = primaryDelegates;
-	}
 
 	public String getDocType() {
 	return docType;
@@ -291,11 +275,11 @@ public class ActionListForm extends KualiForm {
 	this.viewOutbox = viewOutbox;
     }
 
-    public Long[] getOutboxItems() {
+    public String[] getOutboxItems() {
 	return outboxItems;
     }
 
-    public void setOutboxItems(Long[] outboxItems) {
+    public void setOutboxItems(String[] outboxItems) {
 	this.outboxItems = outboxItems;
     }
 
@@ -322,11 +306,13 @@ public class ActionListForm extends KualiForm {
 	public void setHeaderButtons(List<ExtraButton> headerButtons) {
 		this.headerButtons = headerButtons;
 	}
+	
 	public String getMenuBar(){
-		  String url = "";
-		  Properties parameters = new Properties();
-		  url = UrlFactory.parameterizeUrl(KNSConstants.MAINTENANCE_ACTION, parameters);
-          url = "<a href=\"" + url + "\"><img src=\"../kr/images/tinybutton-preferences.gif\" alt=\"create new\" width=\"70\" height=\"15\"/></a>";
+		String url = "";
+		Properties parameters = new Properties();
+		url = UrlFactory.parameterizeUrl(KNSConstants.MAINTENANCE_ACTION, parameters);
+		String krBaseUrl = ConfigContext.getCurrentContextConfig().getKRBaseURL();
+		url = "<a href=\"" + url + "\"><img src=\""+krBaseUrl+"/images/tinybutton-preferences.gif\" alt=\"create new\" width=\"70\" height=\"15\"/></a>";
 		return url;
 	}
 
@@ -359,9 +345,9 @@ public class ActionListForm extends KualiForm {
         //if (documentPopupInd) {
         //    documentPopup = "true";
         //}
-        setRouteLogPopup(new Boolean(Utilities.getKNSParameterBooleanValue(KEWConstants.KEW_NAMESPACE, KNSConstants.DetailTypes.ACTION_LIST_DETAIL_TYPE, KEWConstants.ACTION_LIST_ROUTE_LOG_POPUP_IND)));
-        setDocumentPopup(new Boolean(Utilities.getKNSParameterBooleanValue(KEWConstants.KEW_NAMESPACE, KNSConstants.DetailTypes.ACTION_LIST_DETAIL_TYPE, KEWConstants.ACTION_LIST_DOCUMENT_POPUP_IND)));
-        request.setAttribute("noRefresh", new Boolean(ConfigContext.getCurrentContextConfig().getProperty(KEWConstants.ACTION_LIST_NO_REFRESH)));
+        setRouteLogPopup(Boolean.valueOf(Utilities.getKNSParameterBooleanValue(KEWConstants.KEW_NAMESPACE, KNSConstants.DetailTypes.ACTION_LIST_DETAIL_TYPE, KEWConstants.ACTION_LIST_ROUTE_LOG_POPUP_IND)));
+        setDocumentPopup(Boolean.valueOf(Utilities.getKNSParameterBooleanValue(KEWConstants.KEW_NAMESPACE, KNSConstants.DetailTypes.ACTION_LIST_DETAIL_TYPE, KEWConstants.ACTION_LIST_DOCUMENT_POPUP_IND)));
+        request.setAttribute("noRefresh", Boolean.valueOf(ConfigContext.getCurrentContextConfig().getProperty(KEWConstants.ACTION_LIST_NO_REFRESH)));
 		super.populate(request);
 	}
 
@@ -381,7 +367,12 @@ public class ActionListForm extends KualiForm {
         this.documentPopup = documentPopup;
     }
 
+	public Boolean getHasDisplayParameters() {
+		return this.hasDisplayParameters;
+	}
 
-
+	public void setHasDisplayParameters(Boolean hasDisplayParameters) {
+		this.hasDisplayParameters = hasDisplayParameters;
+	}
 
 }
